scrollbar fixes

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,6 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #000000;
+  background-color: rgb(205 141 236);
   z-index: 999;
 }
